Updates from Overleaf

--- a/thesis/paper/sections/2_relatedWork/index.tex
+++ b/thesis/paper/sections/2_relatedWork/index.tex
@@ -2,22 +2,8 @@
 
 \chapter{Related Work} \label{relatedWork}
 
-This section explores and discusses the state-of-the-art research, tools, and technologies in this field or related to this field. First, we focus on existing UIDLs and how they compare to Intertext. We categorise them to demonstrate the relevancy as coherently as possible and investigate ones that fall into the same category with Intertext on a case-by-case basis. Then, we look into libraries and frameworks that aim to achieve a similar goal with Intertext. We will explain how Intertext is extending the existing solutions to do what it does. Moreover, we will explore commercially available tools and services and discuss why they are relevant to Intertext and what is to be learned from their efforts and success.
+This section explores and discusses the state-of-the-art research, tools, and technologies in the field of user interface development. First, we focus on existing UIDLs and how they compare to Intertext. We categorise them to demonstrate the relevancy as coherently as possible and investigate the ones that fall into the same category as Intertext on a case-by-case basis. Then, we look into libraries and frameworks that aim to achieve a similar goal as Intertext. We will explain how Intertext is extending the existing solutions to do what it does. Moreover, we will explore commercially available tools and services and discuss why they are relevant to Intertext and what is to be learned from their efforts and success.
 
 \input{sections/2_relatedWork/relatedUIDLs}
 \input{sections/2_relatedWork/relatedLibraries}
 \input{sections/2_relatedWork/relatedTools}
-
-% RELATED WORK
-
-% - other UIDLs
-%   - 
-
-% - internal app builders
-%   - retool
-%   - appsmith
-
-% - free-form note taking apps
-%   - notion
-%   - coda
-%   - tally
