--- a/thesis/paper/sections/2_relatedWork/relatedUIDLs.tex
+++ b/thesis/paper/sections/2_relatedWork/relatedUIDLs.tex
@@ -2,13 +2,13 @@
 
 \section{UIDLs} \label{relatedUIDLs}
 
-A UIDL can be defined as having two separate parts: a syntax that describes the user interface characteristics, and semantics that defines what these characteristics mean. They share the common goal of describing a UI without targeting any particular programming language or platform; nevertheless, the end-goal of UIDLs often varies \cite{XMLCompliantUIDLs}. UIDLs typically use XML or a similar markup language/notation that later gets transpiled into a programming language or is processed by a software to be automatically or semi-automatically translated into a UI, a visualisation, or any byproduct depending on the goal of the project. A UIDL can be thought of as a tool designed to achieve a particular goal or to achieve a common goal in a particular way. 
+A UIDL can be defined as having two separate parts: a syntax that describes the user interface characteristics, and semantics that defines what these characteristics mean. They share the common goal of describing a UI without targeting any particular programming language or platform; nevertheless, the end-goal of UIDLs often varies \cite{XMLCompliantUIDLs}. UIDLs typically use XML or a similar markup language/notation that later gets transpiled into a programming language or is processed by a software to be automatically or semi-automatically translated into a UI, a visualisation, or any byproduct depending on the goal of the project. A UIDL can be thought of as a tool designed to achieve a particular goal or a common goal in a particular way. 
 
-Souchon, Nathalie and Vanderdonckt et al., 2003 \cite{XMLCompliantUIDLs}, and later Guerrero-Garcia, Josefina and Gonzalez-Calleros et al., 2009 \cite{UIDLTheoreticalSurvey} argued \textit{"there is a plethora of UIDLs that are widely used, with different goals and different strengths"}. There are many ways of classifying and categorising existing UIDLs, as can be seen in \textit{A review of XML-compliant user interface description languages, 2003} \cite{XMLCompliantUIDLs}, and \textit{A theoretical survey of user interface description languages: Preliminary results, 2009} \cite{UIDLTheoreticalSurvey}. However, in this section, to stay relevant to the comparison to Intertext, we group UIDLs under two main categories: compiled and interpreted UIDLs. Almost all existing IUIDLs falls under the first category, allowing us to focus on the general picture instead of on a case-by-case basis.
+Souchon et al., \cite{XMLCompliantUIDLs}, and later Guerrero-Garcia et al. \cite{UIDLTheoreticalSurvey} argued \textit{"there is a plethora of UIDLs that are widely used, with different goals and different strengths"}. There are many ways of classifying and categorising existing UIDLs, as can be seen in \cite{XMLCompliantUIDLs} and \cite{UIDLTheoreticalSurvey}. However, in this section, to stay relevant to the comparison to Intertext, we group UIDLs under two main categories: compiled and interpreted UIDLs. Almost all existing IUIDLs falls under the first category, allowing us to focus on the general picture instead of on a case-by-case basis.
 
 \subsubsection{Compiled UIDLs}
 
-Compiled refers to cases where UI descriptions are created at design time and are used to generate code or the final UI for different target platforms and environments. Most of the UIDLs falls under this category. They often rely on a transformational approach; they utilise a reference framework for classifying UI elements with multiple levels of abstraction, and reify them into more concrete levels based on the target platform and context of use. OpenUIDL \cite{openuidl}, UIML \cite{UIML}, XIML \cite{XIML}, TeresaXML \cite{TeresaXML}, MariaXML \cite{MariaXML} and UsiXML \cite{UsiXML} are several examples of UIDLs that uses this model. 
+Compiled refers to cases where UI descriptions are created at design time and are used to generate code or the final UI for different target platforms and environments. They often rely on a transformational approach; they utilise a reference framework for classifying UI elements with multiple levels of abstraction, and reify them into more concrete levels based on the target platform and context of use. OpenUIDL \cite{openuidl}, UIML \cite{UIML}, XIML \cite{XIML}, TeresaXML \cite{TeresaXML}, MariaXML \cite{MariaXML} and UsiXML \cite{UsiXML} are several examples of UIDLs that uses this model. 
 
 \subsubsection{Interpreted UIDLs}
 
@@ -32,7 +32,7 @@ We explored UIDLs under two main categories. Some of them show similarities with
   \item Unlike Intertext, most UIDLs with a model-based approach incorporates heavy user interactions.
 \end{enumerate}
 
-Nonetheless, if we were to take a step back to look at the big picture, Intertext has a fundamental difference that separates itself from the others; it is the purpose. The value added by the UIDLs is to improve the development process of user interfaces, reduce the cost and effort of creating UI descriptions that can target multiple platforms and environments with minimal to none additional effort. The byproduct of these UIDLs is a functioning user interface on each target platform. While we aim to take advantage of the nature of UIDLs to enable some of these advancements, we also have an equal focus on the user and improving the user experience. Unlike other UIDLs that doubles down on creating the best UI development experience and producing the most comprehensive outcome possible, we intentionally introduce calculated limitations to benefit users equally, if not more. Although we provide more details on Intertext clients and IUIDL in \nameref{solution} and \nameref{implementation} sections, we can summarise our efforts that distinguish Intertext from other UIDLs as below:
+Nonetheless, if we were to take a step back to look at the big picture, Intertext has a fundamental difference that separates itself from the others; it is the purpose. The value added by the UIDLs is to improve the development process of user interfaces, reduce the cost and effort of creating UI descriptions that can target multiple platforms and environments with minimal to none additional effort. The byproduct of these UIDLs is a functioning user interface on each target platform. While we aim to take advantage of the nature of UIDLs to enable some of these advancements, we also have an equal focus on the user and improving the user experience. Unlike other UIDLs that double down on creating the best UI development experience and producing the most comprehensive outcome possible, we intentionally introduce calculated limitations such as style agnosticism and disallowing third-party code execution to benefit users equally, if not more. Although we provide more details on Intertext clients and IUIDL in \nameref{solution} and \nameref{implementation} sections, we can summarise our efforts that distinguish Intertext from other UIDLs as below:
 
 \begin{enumerate}
   \item Intertext is style-agnostic so that users can customise the look-and-feel of the UIs to their liking.
@@ -41,5 +41,5 @@ Nonetheless, if we were to take a step back to look at the big picture, Intertex
   
   \item The output of IUIDL is solely presentational with support for minimal user interactions. Application logic is expected to be implemented on a generic backend, where the IUIDL is meant to be served from.
 
-  \item Intertext, in general, is a platform that comes with IUIDL and software clients that can interpret and render IUIDL. It has no intention of generating a UI that can run independently.
+  \item Intertext, in general, is a platform that comes with Intertext UIDL (IUIDL) and software clients that can interpret and render it. It has no intention of generating a UI that can run independently.
 \end{enumerate}
