--- a/thesis/paper/sections/3_solution/index.tex
+++ b/thesis/paper/sections/3_solution/index.tex
@@ -3,10 +3,10 @@
 \chapter{Solution} \label{solution}
 
 
-Intertext is a platform based on a straightforward premise; it is a family of applications that can interpret IUIDL, an XML based UI description language, and generate appropriate front-ends for the host platform on the fly. Simply put, a developer wanting to create a front-end application uses a generic backend to generate IUIDL, and serve it from an endpoint, say at https://intertext.example.com. Users who wish to use this application uses an Intertext client on their preferred device or environment and visit this domain just like in a web browser. The Intertext client then makes a request to this domain, fetches the IUIDL served by this endpoint and generates the user interface as per the instructions received via IUIDL. (Fig ~\ref{fig:how_intertext_works})
+Intertext is a platform based on a straightforward premise; it is a family of applications that can interpret IUIDL, an XML based UI description language, and generate appropriate front-ends for the host platform on the fly. Simply put, a developer wanting to create a front-end application uses a generic backend to generate IUIDL, and serve it from an endpoint, say at \texttt{https://intertext.example.com}. Users who wish to use this application use an Intertext client on their preferred device or environment and visit this domain just like in any web browser. The Intertext client then makes a request to this domain, fetches the IUIDL served by this endpoint and generates the user interface as per the instructions received via IUIDL. (Fig ~\ref{fig:how_intertext_works})
 
 
-Rather than rendering a simple static view, it performs some tasks such as accepting user input, navigating to different screens, making additional requests to fetch more data, keeping the UI updated and reading and writing some data to users local storage; all of which is again orchestrated based on the instructions received by the backend in IUIDL syntax.
+Rather than rendering a simple static view, Intertext performs some tasks such as accepting user input, navigating to different screens, making additional requests to fetch more data, keeping the UI updated and reading and writing some data to users local storage; all of which is again orchestrated based on the instructions received by the backend in IUIDL syntax.
 
 
 \begin{figure}
@@ -17,14 +17,8 @@ Rather than rendering a simple static view, it performs some tasks such as accep
 \end{figure}
 
 
-Intertext aims to support multiple software clients (at the time of this paper, web and command-line interface clients are implemented, with more on the way) built natively for various platforms that can interpret IUIDL most appropriately to the host device or platform. For instance, users browsing an Intertext app through a smartphone receives an experience optimized for touch screens, command-line interface client users receive an optimized experience for a text-based interface or a user browsing from a low-end device with limited capabilities use the version optimized for low-performance devices to get a comfortable viewing experience and so on. 
+Intertext aims to support multiple software clients (currently only the web client is implemented) built natively for various platforms that can interpret IUIDL most appropriately to the host device or platform. For instance, users browsing an Intertext app through a smartphone receive an experience optimised for touch screens, command-line interface client users receive an optimised experience for a text-based interface or a user browsing from a low-end device with limited capabilities use the version optimised for low-performance devices to get a comfortable viewing experience and so on. 
 
 \input{sections/3_solution/designPrinciples}
 \input{sections/3_solution/intertextUIDL}
 \input{sections/3_solution/intertextClients}
-
-
-% - How it addresses problems
-% - Describe theoretically (not too much details)
-% - Client, Server etc.
-% - Technical-ish / Conceptual / Architecture 
