--- a/thesis/paper/sections/1_introduction/problemStatement.tex
+++ b/thesis/paper/sections/1_introduction/problemStatement.tex
@@ -20,7 +20,7 @@ Due to its high costs of implementation and maintenance, accessibility is often 
 \subsubsection{Lack of Customisability}
 For many front-end applications, customisability is rarely a concern. The way of front-end ecosystem is, the developer decides on the look and feel of an application rather than the user. Although a recent trend in web design, dark mode support in front-end design \cite{DarkMode} could be seen as a shift towards more customisability. However, very few front-end applications provide such features.
 
-\subsubsection{Lack of Cross-platform Support}
+\subsubsection{Lack of Cross-Platform Support}
 Every now and then, we find ourselves in situations where we are trying to operate a web application with no responsiveness or touch support from our phone—or having to stand up from in front of our computer to reach for our phone because the messaging application we want to use is only available for web/desktop. Hardships in cross-platform application development often result in poor user experience due to compatibility issues and sometimes complete lack of availability.
 
 \subsubsection{Privacy and Security Concerns}
