--- a/thesis/paper/sections/4_implementation/index.tex
+++ b/thesis/paper/sections/4_implementation/index.tex
@@ -2,23 +2,23 @@
 
 \chapter{Implementation} \label{implementation}
 
-The primary language used to implement Intertext is Typescript. Typescript is a superset of Javascript that brings it typing support for safety and a better developer experience. Typescript gets transpiled into Javascript during build time, therefor the byproduct is plain Javascript. Sharing the same language between Intertext clients brings a number of advantages, mostly code sharing.
+The primary language used to implement Intertext is Typescript. Typescript is a superset of JavaScript that brings typing support for safety and a better developer experience. Typescript gets transpiled into JavaScript during build time, therefore the byproduct is plain JavaScript. Sharing the same language between Intertext clients brings a number of advantages, mostly code sharing.
 
 \section{Engine}
 
-Code sharing between Intertext clients has been an important priority while creating the architecture for several reasons. First of all, it is crucial for Intertext clients to behave consistently for some tasks that are common to every Intertext client, such as parsing of IUIDL, rendering of the components, behavioural aspects of the clients, the data structure and so on. These are the cornerstone of Intertext, and they must behave exactly the same across clients. In another words, everything that isn't client-specific needs to be consistent and predictable. This is where Intertext engine comes in play.
+Code sharing between Intertext clients for several reasons has been an important priority while creating the architecture. First of all, it is crucial for Intertext clients to behave consistently for some tasks that are common to every Intertext client, such as the parsing of IUIDL, rendering of the components, behavioural aspects of the clients, the data structure and so on. These are the cornerstone of Intertext, and they must behave exactly the same across clients. In other words, everything that is not client-specific needs to be consistent and predictable. This is where Intertext engine comes in play.
 
-Intertext engine implements several aspects of Intertext clients; most notably it parses IUIDL, internally converts it into JSON, and uses the output to render the components. Intertext clients are only concerned with the view layer, but they use the engine as a black box system. The engine also defines the data types of every component, and internal mechanics of the build and rendering process. It exposes the types for Intertext clients built with Typescript to consume. Intertext engine is built as a standalone library, it exposes the main functions and types, and it is designed to be used in several different ways.
+The Intertext engine implements several aspects of Intertext clients; most notably it parses IUIDL, internally converts it into JSON, and uses the output to render the components. Intertext clients are only concerned with the view layer, but they use the engine as a black box system. The engine also defines the data types of every component, and the internal mechanics of the build and rendering process. It exposes the types for Intertext clients built with Typescript to consume. Intertext engine is built as a standalone library, it exposes the main functions and types, and it is designed to be used in several different ways.
 
-At the time of writing, all Intertext clients that are implemented so far were built with Typescript, they simply import and use the engine as a dependency. Their build system picks up the engine and adds it to their final bundle. However this approach is not possible for potential future clients that do not built on a Javascript runtime. To overcome this issue, the engine can be compiled as a Node module, and be deployed to a Node.js server. This gives us the ability to use the engine on any software system that can send or receive HTTP requests. Moreover, with the same logic, the engine can be deployed locally alongside any Intertext client that runs on a platform that can support Node.js runtime. It can then be deployed and served locally, and used to communicate with the local Intertext client using any protocol that is supported by the host platform as long as there exists a data exchange. 
+At the time of writing, all Intertext clients that are implemented so far were built with Typescript; they simply import and use the engine as a dependency. Their build system picks up the engine and adds it to their final bundle. However this approach is not possible for potential future clients that do not built on a Javascript runtime. To overcome this issue, the engine can be compiled as a Node module, and be deployed to a Node.js server. This gives us the ability to use the engine on any software system that can send or receive HTTP requests. Moreover, with the same logic, the engine can be deployed locally alongside any Intertext client that runs on a platform that can support Node.js runtime. It can then be deployed and served locally, and used to communicate with the local Intertext client using any protocol that is supported by the host platform as long as there exists a data exchange. 
 
-For instance, let's say a car manufacturer wanted to build an Intertext client for their in-car entertainment system using their own components. They could potentially install Node.js on their computer system, or even install a simple raspbery-pi like chip that can run Node.js. Then, they can install the engine as a standalone application in it, and utilize any protocol to build a communication channel between the Intertext client they built on their computer system and the chip. Then, they could serve the IUIDL code either through a network connection (if and when available), or from a locally running server, potentially from the same one the client uses to interact with the engine. 
+For instance, say a car manufacturer wanted to build an Intertext client for their in-car entertainment system using their own components. They could potentially install Node.js on their computer system, or even install a simple Raspbery Pi-like chip that can run Node.js. Then, they can install the engine as a standalone application in it, and utilise any protocol to build a communication channel between the Intertext client they built on their computer system and the chip. Then, they could serve the IUIDL code either through a network connection (if and when available), or from a locally running server, potentially from the same one the client uses to interact with the engine. 
 
 \section{Layout}
 
-The premise of Intertext is that there will be a unified implementation of UI, in a more or less abstract format, which will then be reified into fully functional front-ends on many different environments. These environments have different requirements and limitations; and an all-in-one solution is needed that will handle all these different requirements and limitations with minimal compromises. One of the aspects that needed consideration was the variation in screen sizes. We had to use a layout system that can be used to build a UI once, and would render properly on various screen sizes.
+The premise of Intertext is that there will be a unified implementation of UIs, in a more or less abstract format, which will then be reified into fully functional front-ends on many different environments. These environments have different requirements and limitations; and an all-in-one solution is needed that will handle all these different requirements and limitations with minimal compromises. One of the aspects that needed consideration was the variation in screen sizes. We had to use a layout system that can be used to build a UI once, and would render properly on various screen sizes.
 
-The obvious solution to this problem was using web technologies, as responsive design is one of the cornerstones of web development. There are many well defined specifications in place to build UI's for different screen sizes. But we cannot directly use web technologies as many of the clients are not browser based. Therefor, we had to use an hybrid approach that can work universally.
+The obvious solution to this problem was using web technologies, as responsive design is one of the cornerstones of web development. There are many well defined specifications in place to build UIs for different screen sizes. But we cannot directly use web technologies as many of the clients are not browser based. Therefore, we had to use an hybrid approach that can work universally.
 
 \subsection{Layout System}
 
@@ -31,7 +31,7 @@ IUIDL offers a powerful layout system based on the css flexbox specification. It
   \label{fig:flexbox_props}%
 \end{figure}
 
-Apart from flexbox-based positioning, Intertext layout system also supports absolute positioning. Absolute positioning, as opposed to relative positioning, detaches a component from the flow of the page and positions it relative to its first relatively-positioned parent, having it be floating over everything else, as shown in Figure \ref{fig:absolute_positioning}.
+Apart from flexbox-based positioning, Intertext layout system also supports absolute positioning. Absolute positioning detaches a component from the flow of the page and positions it relative to its first relatively-positioned parent, having it be floating over everything else, as shown in Figure \ref{fig:absolute_positioning}.
 
 \begin{figure}
   \centering
@@ -40,13 +40,13 @@ Apart from flexbox-based positioning, Intertext layout system also supports abso
   \label{fig:absolute_positioning}%
 \end{figure}
 
-One advantage to this approach is that all our clients will render UI elements using the same layout, which will give users a sense of familiarity when switching between the clients. For instance, when a user accustomed to using the web version of Intertext switches to, say the command-line version, they will immediately recognise the layout and be able to navigate without having to adjust. This approach will also allow developers to build responsive layouts to some extent. Given that the same UIDL code will be used to render on multiple clients including ones with narrow and small screens, responsiveness goes a long way. At the time of writing, only flexbox features such as "flex-wrap" can be used for achieving a degree of responsiveness. However we plan to support screen-size aware variants of component properties, even conditional rendering of components based on the screen size. This can be thought of as "media queries" in css terminology. More on this will be on the \nameref{futureWork} section.
+One advantage of this approach is that all our clients will render UI elements using the same layout, which will give users a sense of familiarity when switching between the clients. For instance, when a user accustomed to using the web version of Intertext switches to, say the command-line version, they will immediately recognise the layout and be able to navigate without having to adjust. This approach will also allow developers to build responsive layouts to some extent. Given that the same UIDL code will be used to render on multiple clients, including the ones with narrow and small screens, responsiveness goes a long way. At the time of writing, only flexbox features such as "flex-wrap" can be used for achieving a degree of responsiveness. However we plan to support screen size-aware variants of component properties, even conditional rendering of components based on the screen size. This can be thought of as "media queries" in css terminology. More on this will be on the \nameref{futureWork} section.
 
 \subsection{Unit System}
 
 We had to compromise a few aspects of the unit system in order to make for an all-in-one layout solution. We refrained from using definitive units that are specific to one platform, such as pixels. Most platforms use a different measurement system, for instance 1 unit for the command-line application represents a single space; character width for the x-axis and line height for the y-axis.
 
-As a solution, we offer three different types of units; percentages, spaces and sizes. These units can be used for every property that accepts a unit; such as for width, height, margins, paddings and so on. Percentages are universal and can be calculated on any platform that we can get the screen dimensions of. We are able to use it in web environment natively, also the Yoga engine supports percentage values. Spaces are numeric values that starts from 0, increments by 0.5 until 4, by 1 until 12, by 2 until 16, and keeps increasing exponentially until 96. These values are meant to be used for spacing; for paddings, margins, gutter sizes, and other cases where spaces between UI elements needs to be determined. They are mapped to values on different platforms that are reasonable and look approximately same. Finally, we have sizes, which are used for determining the size of UI elements; in properties such as width, height, minWidth/maxWidth, minHeight/maxHeight and so on. While it also makes sense to use percentages for sizes, in cases where sizes should be fixed and not be changing based on the screen size, the size units can be used. Sizes are named values and are mapped to an appropriate value on every platform. They start from 3xs (xsmall) - up to xs, sm (small), md (medium), lg (large), xl (xlarge), 2xl and goes all the way to 8xl.
+As a solution, we offer three different types of units; percentages, spaces and sizes. These units can be used for every property that accepts a unit; such as for the width, height, margins, paddings and so on. Percentages are universal and can be calculated on any platform that we can get the screen dimensions of. We are able to use it on the web natively, also the Yoga engine supports percentage values. Spaces are numeric values that start from 0, increments by 0.5 until 4, by 1 until 12, by 2 until 16, and keeps increasing exponentially until 96. These values are meant to be used for spacing; for paddings, margins, gutter sizes, and other cases where spaces between UI elements needs to be determined. They are mapped to values on different platforms that are reasonable and look more or less the same. Finally, we have sizes, which are used for determining the size of UI elements; in properties such as \texttt{width}, \texttt{height}, \texttt{minWidth}/\texttt{maxWidth}, \texttt{minHeight}/\texttt{maxHeight} and so on. While it also makes sense to use percentages for sizes, in cases where sizes should be fixed and not be changing based on the screen size, the size units can be used. Sizes are named values and are mapped to an appropriate value on every platform. They start from \texttt{3xs} (xsmall) up to \texttt{xs}, \texttt{sm} (small), \texttt{md} (medium), \texttt{lg} (large), \texttt{xl} (xlarge), \texttt{2xl} and go all the way to \texttt{8xl}.
 
 \subsection{Properties}
 
@@ -62,11 +62,11 @@ As a solution, we offer three different types of units; percentages, spaces and 
 \label{fig:layout_props_example}%
 \end{figure}
 
-IUIDL defines some properties that can be used to leverate the layout system to determine sizes, spacing and positioning of UI elements. Figure \ref{fig:layout_props_example} shows an example of how layout properties can be used to center a text in a block. For positioning, \textit{position} prop can be used, which takes \textit{relative} or \textit{absolute}. The default is \textit{relative}. For spacing, supported values are \textit{top}, \textit{bottom}, \textit{left}, \textit{right}, \textit{margin}, \textit{marginTop}, \textit{marginBottom}, \textit{marginLeft}, \textit{marginRight}, \textit{padding}, \textit{paddingTop}, \textit{paddingBottom}, \textit{paddingLeft} and \textit{paddingRight}. As for sizing, accepted values are \textit{width}, \textit{minWidth}, \textit{maxWidth}, \textit{height}, \textit{minHeight} and \textit{maxHeight}. All these values can take all supported unit types. To leverage the flexbox properties, the accepted properties are \textit{alignContent}, \textit{alignItems}, \textit{alignSelf}, \textit{flexDirection}, \textit{flexWrap}, \textit{flexGrow}, \textit{flexShrink}, \textit{flexBasis} and \textit{justifyContent}. Flexbox properties follow the flexbox specification \cite{FlexSpec1} \cite{FlexSpec2}. All layout properties mentioned above are accepted by and can be used with every Intertext component.
+IUIDL defines some properties that can be used to leverage the layout system to determine the size, spacing and positioning of UI elements. Figure \ref{fig:layout_props_example} shows an example of how layout properties can be used to center a text in a block. For positioning, \texttt{position} prop can be used, which takes \texttt{relative} or \texttt{absolute}. The default is \texttt{relative}. For spacing, supported values are \texttt{top}, \texttt{bottom}, \texttt{left}, \texttt{right}, \texttt{margin}, \texttt{marginTop}, \texttt{marginBottom}, \texttt{marginLeft}, \texttt{marginRight}, \texttt{padding}, \texttt{paddingTop}, \texttt{paddingBottom}, \texttt{paddingLeft} and \newline \texttt{paddingRight}. As for sizing, accepted values are \texttt{width}, \texttt{minWidth}, \texttt{maxWidth}, \texttt{height}, \texttt{minHeight} and \texttt{maxHeight}. All these values can take all supported unit types. To leverage the flexbox properties, the accepted properties are \texttt{alignContent}, \texttt{alignItems}, \texttt{alignSelf}, \texttt{flexDirection}, \texttt{flexWrap}, \texttt{flexGrow}, \texttt{flexShrink}, \texttt{flexBasis} and \texttt{justifyContent}. Flexbox properties follow the flexbox specification \cite{FlexSpec1} \cite{FlexSpec2}. All layout properties mentioned above are accepted by and can be used with every Intertext component.
 
 \section{Components}
 
-Components are the building block of Intertext applications, they are a set of pre-defined building blocks provided out of the box, which can be assembled to create a functional front-end application. They define the view layer, and they are handled differently on every Intertext client. While the rendering logic and flow of the components are fully driven by engine for consistency, it exposes functions for Intertext clients to register renderers for each component. The renderer function gets called by the engine during the render flow; it receives the props that are the given to the component, the children of the component (if any) that the function is expected to be passing on to the next call level of the recursive rendering flow, and are expected to return the component instance that needs to be rendered, which will later be used to render the UI. Figure \ref{fig:registering_renderer} shows an example snippet of the block renderer being registered to the engine on Intertext web client.
+Components are the building blocks of Intertext applications, consist of a set of pre-defined building blocks provided out of the box, which can be assembled to create a functional front-end application. They define the view layer, and they are handled differently on every Intertext client. While the rendering logic and flow of the components are fully driven by engine for consistency, it exposes functions for Intertext clients to register renderers for each component. The renderer function gets called by the engine during the render flow; it receives the props that are the given to the component, the children of the component (if any) that the function is expected to be passing on to the next call level of the recursive rendering flow, and are expected to return the component instance that needs to be rendered, which will later be used to render the UI. Figure \ref{fig:registering_renderer} shows an example snippet of the block renderer being registered to the engine on Intertext web client.
 
 \begin{figure}
 \begin{minipage}{\linewidth}
@@ -93,11 +93,11 @@ engine.renderer.registerBlockRenderer(({
 
 \subsection{Block}
 
-Block component is the most basic and primitive building block of Intertext. It could be thought of as the \textit{div} element of HTML, its main purpose is to enclose components and other blocks. It is primarily a layout component, as it can group and position elements together. Moreover, it can also double as a display component by accepting the \textit{intent} property. When an intent is provided, it renders the block appropriately, thus it can be also used to convey a message. They also accept all layout properties. Figure \ref{fig:intents} shows an example of the block component on the web client, with and without intents.
+Block component is the most basic and primitive building block of Intertext. It can be thought of as the \texttt{div} element of HTML, its main purpose is to enclose components and other blocks. It is primarily a layout component, as it can group and position elements together. Moreover, it can also be used as a display component by accepting the \texttt{intent} property. When an intent is provided, it renders the block appropriately, thus it can be also used to convey a message. They also accept all layout properties. Figure \ref{fig:intents} shows an example of the block component on the web client, with and without intents.
 
 \subsection{Grid}
 
-Grid is an another layout component that can be used to render its children in grid formation. It accepts \textit{cols} property, which can be used to define how many columns should the grid have, and what the size of the column should be. It accepts numeric values inside curly brackets delaminated with a comma. Number of items in curly brackets represents the number of columns, and each number represents units that the columns should take up, where the total number of units is the sum of the numbers inside curly brackets. For instance, if \textit{cols} value was \textit{[1, 1, 1, 1]}, it would mean that the grid has four columns that are divided equally, where \textit{[1, 3]} would represent two columns with widths being 25\% to 75\%. Grid component also takes a \textit{gap} property to describe the gutter size. It can take any one of the spacing values. Any number of children can be provided to the grid component, without the need to next them in any way, it will automatically position its immediate children based on the given configuration. \ref{fig:grid_xml} shows an example of how grid component can be used, and Figure \ref{fig:grid} shows some render outputs of the grid component for the web client.
+Grid is an another layout component that can be used to render its children in grid formation. It accepts \texttt{cols} property, which can be used to define how many columns should the grid have, and what the size of the column should be. It accepts numeric values inside curly brackets delaminated with a comma. Number of items in curly brackets represents the number of columns, and each number represents units that the columns should take up, where the total number of units is the sum of the numbers inside curly brackets. For instance, if \texttt{cols} value was \texttt{[1, 1, 1, 1]}, it would mean that the grid has four columns that are divided equally, where \texttt{[1, 3]} would represent two columns with widths being 25\% to 75\%. Grid component also takes a \texttt{gap} property to describe the gutter size. It can take any one of the spacing values. Any number of children can be provided to the grid component, without the need to next them in any way, it will automatically position its immediate children based on the given configuration. \ref{fig:grid_xml} shows an example of how grid component can be used, and Figure \ref{fig:grid} shows some render outputs of the grid component for the web client.
 
 \begin{figure}
 \begin{minipage}{\linewidth}
@@ -125,13 +125,13 @@ Grid is an another layout component that can be used to render its children in g
 
 \subsection{Typography}
 
-There are multiple components for typography, most of which are based off of the \textit{text} component. All components for typography stems from the \textit{text} component, but for ease of use, we defined aliases that utilizes the \textit{text} component with a set configuration. The properties that the \textit{text} component accepts are \textit{p}, \textit{h1}, \textit{h2}, \textit{h3}, \textit{b}, \textit{i}, \textit{u}, \textit{block}, \textit{muted}, \textit{code} and \textit{intent}. \textit{p} stands for "paragraph", which is used to define a paragraph block. \textit{h1}, \textit{h2}, \textit{h3} represents headings, and their respective number represents the heading level. The behaviour is similar to HTML. \textit{b}, \textit{i}, \textit{u} are styling options, represents "bold", "italics" and "underlined" respectively. \textit{muted} renders the text with a muted color, useful for descriptions, subtexts or any secondary text that needs to be less attention grabbing. \textit{code} renders the text with a light background and with monospace font family, should be used with codes. 
+There are multiple components for typography, most of which are based off of the \texttt{text} component. All components for typography stems from the \texttt{text} component, but for ease of use, we defined aliases that utilizes the \texttt{text} component with a set configuration. The properties that the \texttt{text} component accepts are \texttt{p}, \texttt{h1}, \texttt{h2}, \texttt{h3}, \texttt{b}, \texttt{i}, \texttt{u}, \texttt{block}, \texttt{muted}, \texttt{code} and \texttt{intent}. \texttt{p} stands for paragraph, which is used to define a paragraph block. \texttt{h1}, \texttt{h2}, \texttt{h3} represents headings, and their respective number represents the heading level. The behaviour is similar to HTML. \texttt{b}, \texttt{i}, \texttt{u} are styling options, represents bold, italics and underlined respectively. \texttt{muted} renders the text with a muted color, useful for descriptions, subtexts or any secondary text that needs to be less attention grabbing. \texttt{code} renders the text with a light background and with monospace font family, should be used with codes. 
 
-By default, the \textit{text} component renders inline, meaning, the render output of \textit{<text>1</text><text>2</text>} will appear side by side, as "\textit{12}". However, this behaviour changes for block-level properties; \textit{p}, \textit{h1}, \textit{h2} and \textit{h3}. \textit{text} components that has these properties will take up the full line, and any other text component before or after them will fall into a new line. \textit{block} property is a way to prevent text from rendering inline, without giving it any particular style. Text component also accepts \textit{intent} property, which renders the text with the a color given its intent. Last but not least, text component can accept all layout properties just like any other component. The aliases that can be used in place of \textit{text} are \textit{p}, \textit{h1}, \textit{h2} and \textit{h3} - which will render a \textit{text} component with the respective styles applied. All properties that the text component accepts can be used together to combine styles. For instance, a configuration such as \textit{intent="error", b="true", u="true", h2="true" muted="true"} will result as a red h2 tag, muted, that is bold and underlined.
+By default, the \texttt{text} component renders inline, meaning, the render output of \texttt{<text>1</text><text>2</text>} will appear side by side, as \texttt{12}. However, this behaviour changes for block-level properties; \texttt{p}, \texttt{h1}, \texttt{h2} and \texttt{h3}. \texttt{text} components that has these properties will take up the full line, and any other text component before or after them will fall into a new line. \texttt{block} property is a way to prevent text from rendering inline, without giving it any particular style. Text component also accepts \texttt{intent} property, which renders the text with the a color given its intent. Last but not least, the text component can accept all layout properties just like any other component. The aliases that can be used in place of \texttt{text} are \texttt{p}, \texttt{h1}, \texttt{h2} and \texttt{h3} which will render a \texttt{text} component with the respective styles applied. All properties that the text component accepts can be used together to combine styles. For instance, a configuration such as \texttt{intent="error", b="true", u="true", h2="true" muted="true"} will result as a red h2 tag, muted, that is bold and underlined.
 
 \subsection{Literals}
 
-Literals are standalone string (or number) values provided to components (other than the \textit{text} component) as children. Figure \ref{fig:text_vs_literal} shows the difference between a literal and a text value. While literals aren't exactly a component themselves, they are nonetheless values that rendering needs to be handled by each client, thus they need their own renderer. The way literals are handled differs from platform to platform, for instance on the web client they can be rendered as is, while on the command line client, they are required to be wrapped within a local Text node.
+Literals are standalone string (or number) values provided to components (other than the \texttt{text} component) as children. Figure \ref{fig:text_vs_literal} shows the difference between a literal and a text value. While literals are not exactly a component themselves, they are nonetheless values that rendering needs to be handled by each client, thus they need their own renderer. The way literals are handled differs from platform to platform. For instance on the web client they can be rendered as is, while on the command-line client, they are required to be wrapped within a local Text node.
 
 \begin{figure}
 \begin{minipage}{\linewidth}
@@ -147,7 +147,7 @@ Literals are standalone string (or number) values provided to components (other 
 
 \subsection{Collapse}
 
-Collapse component can be used to hide long-form content within a collapsible panel that is closed by default, and can be toggled by clicking the handle. It accepts the complex attribute \textit{handle} that takes the contents of the collapse handle. It's children will be rendered inside of the collapse. Collapse components can be nested, in which case each collapse component will operate individually. Figure \ref{fig:collapse_xml} shows how it can be used, and Figure \ref{fig:collapse} shows the render output of a collapse component on the Intertext web client.
+Collapse component can be used to hide long-form content within a collapse panel that is closed by default, and can be toggled open by clicking the handle. It accepts the complex attribute \texttt{handle} that takes the contents of the collapse handle. It's children will be rendered inside of the collapse. Collapse components can be nested, in which case each collapse component will operate individually. Figure \ref{fig:collapse_xml} shows how it can be used, and Figure \ref{fig:collapse} shows the render output of a collapse component on the Intertext web client.
 
 \begin{figure}
 \begin{minipage}{\linewidth}
